# QA_mobile_automation

./: .gitignore  conftest.py  pyproject.toml  requirements.txt
tests/: conftest.py  test_ios_samle_app.py  test_ios_sample_app.py  test_wikipeda_android_app.py  test_wikipedia_android_app.py
