[tool.poetry]
name = "homework 21"
version = "0.1.0"
description = "Dependencies for homework 20 of Python QA Automation course"
authors = ["Timir Gazizov <abzxcvvcxzba@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0rc4"
pytest = "^7.4.4"
jsonschema = "^4.20.0"
requests = "^2.31.0"
allure-pytest = "^2.13.2"
appium-python-client = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
